# todo_list_fastapi

./: .dockerignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: 2e89e30740af_fix_created_at_column_name.py  46e45e1e3c2f_create_users_table.py  cbfc1a1e0329_add_created_at_and_updated_at_columns_.py  d0bc6ba8f955_create_todos_table.py  e9e0bce2026d_add_updated_at_collumn_to_the_users_.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
todo_list_fastapi/: app.py  database.py  schemas.py  security.py
todo_list_fastapi/routers/: auth.py  todos.py  users.py
